# icu_converter

./: .gitignore  .gitmodules  CMakeLists.txt  converter.cpp
build_lib/: libicutu.so.65.1
