cmake_minimum_required(VERSION 3.0)
project(converter)
set(CMAKE_BINARY_DIR "/home/cricket/cpp/icu_converter")

# add_definitions(-DUDATA_DEBUG=1)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
find_package(Threads)
find_package(ICU COMPONENTS i18n data REQUIRED)

# Add icu files
set(ICU_ROOT_DIR "/home/cricket/cpp/icu/icu4c/source")
set(ICU_BUILD_DIR "icu")
# add_subdirectory(${ICU_ROOT_DIR} icu)
# include_directories("${ICU_ROOT_DIR}/common"
#                     "${ICU_ROOT_DIR}/i18n")

# find_library(ICU_A icu ${ICU_BUILD_DIR})
# message("icu: ${ICU_A}")
# find_library(ICU_DATA_A customicudata lib)
# message("icudata: ${ICU_DATA_A}")
# find_library(ICU_I18N_A customicui18n lib)
# message("icui18n: ${ICU_I18N_A}")
# find_library(ICU_IO_A customicuio lib)
# message("icuio: ${ICU_IO_A}")
# find_library(ICU_UC_A customicuuc lib)
# message("icuuc: ${ICU_UC_A}")
# find_library(ICU_TU_A customicutu lib)
# message("icutu: ${ICU_TU_A}")

add_executable(converter converter.cpp)
target_link_libraries(converter ${CMAKE_DL_LIBS})
target_link_libraries(converter ${CMAKE_THREAD_LIBS_INIT} )
target_link_libraries(converter ${ICU_LIBRARIES})

# target_link_libraries(converter ${ICU_A})
# target_link_libraries(converter ${ICU_DATA_A})
# target_link_libraries(converter ${ICU_I18N_A})
# target_link_libraries(converter ${ICU_IO_A})
# target_link_libraries(converter ${ICU_UC_A})
# target_link_libraries(converter ${ICU_TU_A})
